script location changed

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
             </div>
         </div>
 
-        <script src="./dist/script.js"></script>
+        <script src="./script.js"></script>
     </body>
 </html>
